--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,9 @@
+h1. Important Note!!!
+
+h2. This repo will be properly renamed to gravatar_image_tag once the GitHub Rackspace move is done this weekend and they turn back on renaming.
+
+_I really can not believe that I consistently spelled the name wrong through this whole process_
+
 !http://s.gravatar.com/images/logo.png(Gravitar Logo)!
 
 h1. Gravitar Image Tag Plugin
@@ -7,58 +13,58 @@ Rails view helper for grabbing "Gravitar":http://en.gravatar.com/ images.  The g
 h2. Install as a Ruby on Rails Plugin
 
 The traditional way.
-<pre>./script/plugin install git://github.com/mdeering/gravitar_helper.git</pre>
+<pre>./script/plugin install git://github.com/mdeering/gravatar_helper.git</pre>
 
 or the old-school but still c00l way!
-<pre>piston import git://github.com/mdeering/gravitar_helper.git vendor/plugins/gravitar_helper</pre>
+<pre>piston import git://github.com/mdeering/gravatar_helper.git vendor/plugins/gravatar_helper</pre>
 
 or for all you hip gitsters.
-<pre>git submodule add git://github.com/mdeering/gravitar_helper.git vendor/plugins/gravitar_helper git submodule init</pre>
+<pre>git submodule add git://github.com/mdeering/gravatar_helper.git vendor/plugins/gravatar_helper git submodule init</pre>
 
 h2. Usage
 
 Once you have installed it as a plugin for your rails app usage is simple.
 
-<pre>gravitar_image_tag('spam@spam.com'.gsub('spam', 'mdeering'), :alt => 'Michael Deering')</pre>
+<pre>gravatar_image_tag('spam@spam.com'.gsub('spam', 'mdeering'), :alt => 'Michael Deering')</pre>
 
-*Boom* here is my gravitar !http://www.gravatar.com/avatar.php?gravatar_id=4da9ad2bd4a2d1ce3c428e32c423588a(Michael Deering)!
+*Boom* here is my gravatar !http://www.gravatar.com/avatar.php?gravatar_id=4da9ad2bd4a2d1ce3c428e32c423588a(Michael Deering)!
 
 h2. Configuration Points
 
 h3. Setting the default image
 
-If no default image is given in either an initializer or through the options passed to the gravitar_image_tag then the default image from the gravitar site will be displayed.
+If no default image is given in either an initializer or through the options passed to the gravatar_image_tag then the default image from the gravatar site will be displayed.
 
-<pre>gravitar_image_tag('junk', :alt => 'Default Gravitar Image')</pre>
+<pre>gravatar_image_tag('junk', :alt => 'Default Gravitar Image')</pre>
 
-*Splat* the default gravitar image !http://www.gravatar.com/avatar.php?gravatar_id=0c821f675f132d790b3f25e79da739a7(Default Gravitar Image)!
+*Splat* the default gravatar image !http://www.gravatar.com/avatar.php?gravatar_id=0c821f675f132d790b3f25e79da739a7(Default Gravitar Image)!
 
 You can specify the default image through an initializer as follows:
 
-<pre># config/initializers/gravitar_defaults.rb
-ActionView::Base.default_gravitar_image  = 'http://assets.yourhost.com/images/default_gravitar.png'</pre>
+<pre># config/initializers/gravatar_defaults.rb
+ActionView::Base.default_gravatar_image  = 'http://assets.yourhost.com/images/default_gravatar.png'</pre>
 
-You can also specify the default image to fallback to or override the one set in the above initializer by passing the _:gravitar => { :default => 'http://assets.yourhost.com/images/override_gravitar.png' }_ option to the gravitar_image_tag call.  All other options will be forwarded onto the image_tag.
+You can also specify the default image to fallback to or override the one set in the above initializer by passing the _:gravatar => { :default => 'http://assets.yourhost.com/images/override_gravatar.png' }_ option to the gravatar_image_tag call.  All other options will be forwarded onto the image_tag.
 
-<pre>gravitar_image_tag('junk', :alt => 'Github Default Gravitar', :gravitar => { :default => 'http://github.com/images/gravatars/gravatar-80.png' })</pre>
+<pre>gravatar_image_tag('junk', :alt => 'Github Default Gravitar', :gravatar => { :default => 'http://github.com/images/gravatars/gravatar-80.png' })</pre>
 
 *Ka-Pow* !http://www.gravatar.com/avatar.php?default=http%3A%2F%2Fgithub.com%2Fimages%2Fgravatars%2Fgravatar-80.png&gravatar_id=0c821f675f132d790b3f25e79da739a7(Github Default Gravitar)!
 
 h3. Setting the default image size
 
-If no default image size is given in either the plugin configuration or through the options passed to the gravitar_image_tag then the default image size from the gravitar site will be displayed (80px x 80px at the time of this writing).
+If no default image size is given in either the plugin configuration or through the options passed to the gravatar_image_tag then the default image size from the gravatar site will be displayed (80px x 80px at the time of this writing).
 
 You can specify your default image size through the plugin configuration by adding the following line to your rails environment.
 
-<pre># config/initializers/gravitar_defaults.rb
-ActionView::Base.default_gravitar_size  = 120</pre>
+<pre># config/initializers/gravatar_defaults.rb
+ActionView::Base.default_gravatar_size  = 120</pre>
 
-You can also specify the image size or override the one set in the plugin configuration by passing the _:gravitar => { :size => 50 }_ option to the gravitar_image_tag call.  All other options will be forwarded on to the image_tag call.
+You can also specify the image size or override the one set in the plugin configuration by passing the _:gravatar => { :size => 50 }_ option to the gravatar_image_tag call.  All other options will be forwarded on to the image_tag call.
 
-<pre>gravitar_image_tag('spam@spam.com'.gsub('spam', 'mdeering'), :alt => 'Michael Deering', :class => 'some-class', :gravitar => { :size => 15 })</pre>
+<pre>gravatar_image_tag('spam@spam.com'.gsub('spam', 'mdeering'), :alt => 'Michael Deering', :class => 'some-class', :gravatar => { :size => 15 })</pre>
 
 *Mini Me!* !(some-class)http://www.gravatar.com/avatar.php?gravatar_id=4da9ad2bd4a2d1ce3c428e32c423588a&size=15(Michael Deering)!
 
 h2. Credits
 
-The ideas an methods for this plugin are from expanding upon my original blog post "Adding Gravitar To Your Website Or Blog (Gravitar Rails)":http://mdeering.com/posts/005-adding-gravitar-to-your-website-or-blog
+The ideas an methods for this plugin are from expanding upon my original blog post "Adding Gravitar To Your Website Or Blog (Gravitar Rails)":http://mdeering.com/posts/005-adding-gravatar-to-your-website-or-blog
