--- a/ROADMAP.textile
+++ b/ROADMAP.textile
@@ -1,8 +1,18 @@
+h1. 0.2.0
+
+* Add model helpers for ActiveRecord and DataMapper
+
+<pre>class Comment < ActiveRecord::Base
+  has_gravatar :author, :size => 120
+end</pre>
+
+<pre>Comment.first.gravatar_url</pre>
+
 h1. 0.1.0
 
-* -Support https calls to Gravatar-
-* Support the ratings call to Gravatar
-* Support for the filetype call to Gravatar
+* -Add support for https calls to Gravatar-
+* -Add support the different ratings call to Gravatar-
+* -Add support for the filetype call to Gravatar-
 
 h1. 0.0.1
 
