--- a/ROADMAP.textile
+++ b/ROADMAP.textile
@@ -1,14 +1,18 @@
+h1. 2.0
+
+* This gem is still using Jeweler, move it over to use bundler
+* Add helpers at the model level
+** Support some of the major attachment handlers such as Paperclip and Dragonfly to allow for avatars with Gravatar fallback
+* Remove the deprecations
+* Modularity improvments
+* Middleman helpers
+* Check for fix or resubmit Rails issue related to https://github.com/mdeering/gravatar_image_tag/blob/master/lib/gravatar_image_tag.rb#L63
+
 h1. 1.1.0
 
-* Add model helpers for ActiveRecord/ActiveModel
+* Issue #10 https://github.com/mdeering/gravatar_image_tag/issues/10
 
-<pre>class Comment < ActiveRecord::Base
-  has_gravatar :author, :size => 120
-end</pre>
-
-<pre>Comment.first.gravatar_url</pre>
-
-h1. 1.0.0
+h1. -1.0.0-
 
 * -Block Configuration DSL support-
 
@@ -22,12 +26,12 @@ GravatarImageTag.configure do |config|
 end
 </pre>
 
-h1. 0.1.0
+h1. -0.1.0-
 
 * -Add support for https calls to Gravatar-
 * -Add support the different ratings call to Gravatar-
 * -Add support for the filetype call to Gravatar-
 
-h1. 0.0.1
+h1. -0.0.1-
 
 * -package things up into a gem.- "Hosted on Gemcutter now(Gravatar Image Tag Ruby Gem)":http://rubygems.org/gems/gravatar_image_tag
