--- a/README.textile
+++ b/README.textile
@@ -34,13 +34,16 @@ h2. Install as a Ruby on Rails Plugin
 
 h2. Usage
 
+h3. Gravatar Image Tag
 Once you have installed it as a plugin for your rails app usage is simple.
 
 <pre>gravatar_image_tag('spam@spam.com'.gsub('spam', 'mdeering'), :alt => 'Michael Deering')</pre>
 
 *Boom* here is my gravatar !http://www.gravatar.com/avatar/4da9ad2bd4a2d1ce3c428e32c423588a(Michael Deering)!
 
-p. Return only the Gravatar URL
+h3. Gravatar Image URL
+
+p. You can also return just the Gravatar URL:
 
 <pre>gravatar_image_url('spam@spam.com'.gsub('spam', 'mdeering'), filetype: :png, rating: 'pg', size: 15, secure:false } )</pre>
 
