--- a/README.textile
+++ b/README.textile
@@ -50,7 +50,7 @@ p. You can also return just the Gravatar URL:
 
 p. Useful when used in your inline CSS.
 
-<pre><div class="gravatar" style="background:transparent url(<%= gravatar_image_url('spam@spam.com'.gsub('spam', 'mdeering')) %>) 0px 0px no-repeat"></div></pre>
+<pre><div class="gravatar" style="background:transparent url(<%= gravatar_image_url('spam@spam.com'.gsub('spam', 'mdeering'), size: 100) %>) 0px 0px no-repeat; width:100px; height:100px;"></div></pre>
 
 h2. Configuration
 
